revert test_transfer.py to original, exclude test_webui.py from tox, add gevent-websocket to requirements

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
 #passenv = DOCKER_HOST DOCKER_TLS_VERIFY DOCKER_CERT_PATH
 
 commands =
-    coverage run --source raiden --branch -m py.test {posargs}
+    coverage run --source raiden --branch -m py.test --ignore raiden/tests/test_webui.py {posargs} 
 
 
 [testenv:coverage]
