--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: python
+sudo: required
+dist: trusty
 python:
 - '2.7'
+before_install:
+  - sudo add-apt-repository -y ppa:ethereum/ethereum
+  - sudo apt-get update
+  - sudo apt-get install -y solc
 install:
 - pip install -r requirements.txt
 - pip install coveralls
