--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ rlp>=0.4.3
 c_secp256k1==0.0.8
 pycryptodome>=3.3.1
 networkx
-ethereum
+ethereum>=1.3.0
+ethereum-serpent
 u-msgpack-python
 repoze.lru
