--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 before_install:
 - sudo add-apt-repository -y ppa:ethereum/ethereum
 - sudo apt-get update
-- sudo apt-get install -y solc
+- sudo apt-get install -y solc ethereum
 install:
 - pip install -r requirements.txt
 - pip install coveralls
