--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ sudo: required
 dist: trusty
 python:
 - '2.7'
+cache:
+  directories:
+      - ~/.ethash
 before_install:
 - sudo add-apt-repository -y ppa:ethereum/ethereum
 - sudo apt-get update
