--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 - sudo add-apt-repository -y ppa:ethereum/ethereum
 - sudo apt-get update
 - sudo apt-get install -y solc ethereum
+- geth makedag 0 ~/.ethash
 install:
 - pip install -r requirements.txt
 - pip install coveralls
