wip: test suit passing + balance proof fixes + tester blockchain working

--- a/tox.ini
+++ b/tox.ini
@@ -1,38 +1,35 @@
 [tox]
 envlist = py27,coverage,flake8
 
+[testenv:devenv]
+envdir = devenv
+basepython = python2.7
+usedevelop = True
+deps =
+    -rrequirements.txt
+    pdbpp
+commands =
+    py.test --blockchain-type=tester {posargs}
+
 [testenv]
 deps =
     -rrequirements.txt
     coverage==4.0
-
-#passenv = DOCKER_HOST DOCKER_TLS_VERIFY DOCKER_CERT_PATH
-
 commands =
-    coverage run --source raiden --branch -m py.test --ignore raiden/tests/test_webui.py {posargs} 
-
+    py.test --blockchain-type=tester --ignore raiden/tests/test_webui.py {posargs}
+    coverage run --source raiden --branch -m py.test --ignore raiden/tests/test_webui.py {posargs}
 
 [testenv:coverage]
 basepython = python2.7
 skip_install = True
-
-deps =
-    coverage==4.0
-
-commands =
-    coverage report --show-missing
-
+deps = coverage==4.0
+commands = coverage report --show-missing
 
 [testenv:flake8]
 basepython = python2.7
 skip_install = True
-
-deps =
-    flake8==2.4.1
-
-commands =
-    flake8 raiden
-
+deps = flake8==2.4.1
+commands = flake8 raiden
 
 [flake8]
 max-line-length = 99
