--- a/tools/ansible/roles/build-ami/vars/main.yaml
+++ b/tools/ansible/roles/build-ami/vars/main.yaml
@@ -1,3 +1,5 @@
 ami_id: ami-3e32f05e  # Ubuntu Server 14.04 LTS (PV), SSD Volume Type 64bit
 region: us-west-2
 instance_type: t1.micro
+raiden_version: HEAD
+raiden_dir: "/home/ubuntu/raiden"
