--- a/tools/ansible/build-ami.yaml
+++ b/tools/ansible/build-ami.yaml
@@ -2,8 +2,6 @@
   name: init
   connection: local
   gather_facts: False
-  vars:
-    count: 1
   roles: 
     - build-ami
   tags:
@@ -20,20 +18,20 @@
         instance_type: "{{ instance_type }}" 
         image: "{{ ami_id }}"
         wait: true
-        count: "{{ count }}"
+        count: 1 
         instance_tags:
           Name: Build
       register: ec2
 
     - name: Add all instance public IPs to host group
-      add_host: hostname={{ item.public_ip }} groups=key_raiden
+      add_host: hostname={{ item.public_ip }} groups=tag_Name_Build
       with_items: "{{ ec2.instances }}"
 
     - name: Wait for SSH to come up
       wait_for: host={{ item.public_ip }} port=22 delay=60 timeout=320 state=started
       with_items: "{{ ec2.instances }}"
 
-- hosts: key_raiden
+- hosts: tag_Name_Build
   name: install geth 
   remote_user: "{{ remote_user }}"
   gather_facts: true
@@ -53,7 +51,7 @@
         - geth
         - solc
 
-- hosts: key_raiden
+- hosts: tag_Name_Build
   name: make DAG
   remote_user: "{{ remote_user }}"
   gather_facts: true
@@ -77,7 +75,7 @@
         creates: "{{ dag }}/full-R23-0000000000000000"
         cmd: "geth makedag 1 {{ dag }}" 
 
-- hosts: key_raiden
+- hosts: tag_Name_Build
   name: install raiden 
   remote_user: "{{ remote_user }}"
   gather_facts: true
@@ -124,7 +122,52 @@
         virtualenv: "{{ venv }}"
         chdir: "{{ raiden_dir }}"
 
-- hosts: key_raiden
+- hosts: tag_Name_Build
+  name: store ami
+  remote_user: "{{ remote_user }}"
+  gather_facts: False
+  roles:
+    - build-ami
+    - scenario
+  tags:
+    - store_ami
+
+  tasks:
+    - include: roles/common/tasks/scenario_ami_id_from_name.yaml
+
+    - name: delete previously created AMI
+      local_action:
+        module: ec2_ami
+        state: absent
+        image_id: "{{ scenario_ami_id }}"
+        region: "{{ region }}"
+        wait: yes
+        wait_timeout: 600
+      register: deleted
+      when: scenario_ami_id is defined 
+
+    - name: wait some time because AWS does not realize deletion immediately
+      pause:
+        minutes: 1
+      when: deleted.changed
+
+    # Collect instance id: http://stackoverflow.com/a/27307254 
+    - action: ec2_facts
+
+    - name: store ami 
+      local_action:
+        module: ec2_ami
+        region: "{{ region }}"
+        instance_id: "{{ ansible_ec2_instance_id }}"
+        name: "{{ scenario_ami_name }}"
+        wait: yes
+        wait_timeout: 600
+        device_mapping:
+          - device_name: "/dev/sdb"
+            no_device: yes
+      when: cleanup is not defined
+
+- hosts: tag_Name_Build
   name: terminate
   remote_user: "{{ remote_user }}"
   gather_facts: False
