--- a/tools/ansible/build-ami.yaml
+++ b/tools/ansible/build-ami.yaml
@@ -87,11 +87,17 @@
     - venv: "{{ ansible_env.HOME }}/raidenvenv"
 
   tasks:
+    - name: add py27 ppa
+      shell: 
+        cmd: add-apt-repository ppa:fkrull/deadsnakes-python2.7 -y
+      sudo: yes
+
     - name: install raiden system dependencies 
       apt: name="{{ item }}" update_cache=yes
       sudo: yes
       with_items:
         - git-core
+        - python2.7
         - python-pip
         - python-dev
         - python-virtualenv
