--- a/tools/ansible/prepare-scenario.yaml
+++ b/tools/ansible/prepare-scenario.yaml
@@ -41,10 +41,6 @@
       wait_for: host={{ item.public_ip }} port=22 delay=60 timeout=320 state=started
       with_items: "{{ ec2.instances }}"
 
-    - name: debug node_ips
-      debug:
-        var: node_ips
-
     - include: roles/scenario/tasks/read_scenario_params.yaml
 
     - name: create scenario global folder
@@ -179,13 +175,13 @@
     - name: store private key per raiden node
       copy:
         content: "{{ item.value.privatekey }}"
-        path: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}/privatekey.txt"
+        dest: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}/privatekey.txt"
       with_dict: "{{ raiden_accounts }}"
 
     - name: store address per raiden node
       copy:
         content: "{{ item.value.address }}"
-        path: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}/address.txt"
+        dest: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}/address.txt"
       with_dict: "{{ raiden_accounts }}"
 
 
