--- a/tools/ansible/roles/scenario/vars/main.yaml
+++ b/tools/ansible/roles/scenario/vars/main.yaml
@@ -2,3 +2,4 @@ scenario_ami_name: raiden_preinstalled
 instance_type: t1.micro 
 number_of_nodes: 2
 raiden_per_node: 2
+geth_datadir: "/home/ubuntu/geth"
