--- a/tools/ansible/roles/build-ami/vars/main.yaml
+++ b/tools/ansible/roles/build-ami/vars/main.yaml
@@ -1,3 +1,3 @@
-ami_id: ami-3e32f05e  # Ubuntu Server 14.04 LTS (PV), SSD Volume Type 64bit
-instance_type: t1.micro
+ami_id: ami-d732f0b7  # Ubuntu Server 14.04 LTS (HVM), SSD Volume Type 64bit
+instance_type: t2.micro
 raiden_version: HEAD
