--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -70,7 +70,8 @@
     - name: shell command stub (for dir in {{ user_home }}/40*; do...)
       #chdir: "{{ user_home }}"
       debug:
-        msg: "raidenvenv/bin/raiden $(cat {{ item }}/raiden_flags.txt) --privatekey $(cat {{ item }}/privatekey.txt) --external_listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }}"
+        msg: "raidenvenv/bin/raiden $(cat raiden_flags.txt) --privatekey $(cat {{ item }}/privatekey.txt) --external_listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }}"
+        # chdir: "{{ user_home }}"
       with_items:
         - "{{ raiden_ports }}"
 
