Add user separation for scenario runs #61
This allows to give some extra parameters in order to have several scenarios
online and run playbooks without interfering with each other. See
README.md::DEV-notes

--- a/tools/ansible/prepare-scenario.yaml
+++ b/tools/ansible/prepare-scenario.yaml
@@ -28,6 +28,7 @@
         instance_tags:
           Name: Scenario
           Scenario: "{{ scenario_name }}"
+          user: "{{ user_tag }}"
       register: ec2
 
     - name: Add all instance public IPs to host group
