--- a/tools/ansible/prepare-scenario.yaml
+++ b/tools/ansible/prepare-scenario.yaml
@@ -64,6 +64,35 @@
       with_items: "{{ node_ips }}"
 
 
+- hosts: localhost
+  name: build scenario description
+  gather_facts: no
+  roles:
+    - scenario
+    - common
+  tags:
+    - prepare_scenario
+
+  tasks:
+    - include: roles/scenario/tasks/read_scenario_params.yaml
+
+    - name: create scenario.json 
+      shell:
+        chdir: "../"
+        cmd: "python config_builder.py build_scenario {{ raiden_per_node }} {{ node_ips | join(' ') }}"
+      register: out
+
+    - name: jsonify
+      set_fact:
+        scenario_description: "{{ out.stdout | from_json }}"
+
+    - name: store scenario file toplevel 
+      copy:
+        content: "{{ scenario_description }}"
+        dest: "{{ scenario_folder }}/scenario.json"
+        mode: a+r
+
+
 - hosts: localhost 
   name: prepare geth 
   gather_facts: true
@@ -125,7 +154,7 @@
     - name: create blockchain config (genesis & raiden flags)
       shell:
         chdir: "../"
-        cmd: "python config_builder.py full_genesis {{ raiden_per_node }} {{ node_ips | join(' ') }}"
+        cmd: "python config_builder.py full_genesis {{ raiden_per_node }} {{ node_ips | join(' ') }} --scenario {{ scenario_folder }}/scenario.json"
       register: out
 
     - name: jsonify
@@ -166,7 +195,6 @@
       set_fact:
         raiden_accounts: "{{ out.stdout | from_json }}"
 
-
     - name: create raiden instance folders
       file:
         path: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}"
@@ -185,35 +213,11 @@
         dest: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}/address.txt"
       with_dict: "{{ raiden_accounts }}"
 
-
-- hosts: localhost
-  name: build scenario description
-  gather_facts: no
-  roles:
-    - scenario
-    - common
-  tags:
-    - prepare_scenario
-
-  tasks:
-    - include: roles/scenario/tasks/read_scenario_params.yaml
-
-    - name: create raiden node_list
-      shell:
-        chdir: "../"
-        cmd: "python config_builder.py build_scenario {{ raiden_per_node }} {{ node_ips | join(' ') }}"
-      register: out
-
-    - name: jsonify
-      set_fact:
-        scenario_description: "{{ out.stdout | from_json }}"
-
-    - name: store scenario file per node
+    - name: distribute scenario.json
       copy:
-        content: "{{ scenario_description }}"
-        dest: "{{ scenario_folder }}/{{ item }}/scenario.json"
-        mode: a+rx
-      with_items: "{{ node_ips }}"
+        src: "{{ scenario_folder }}/scenario.json"
+        dest: "{{ scenario_folder }}/{{ item.key.split(':').0 }}/{{ item.key.split(':').1 }}/scenario.json"
+      with_dict: "{{ raiden_accounts }}"
 
 
 - hosts: tag_Name_Scenario
