Allow to start over with new blockchain #61 #63
On subsequent calls to `run-scenario.yaml`, `geth`'s blockchaindata
will be wiped, in order to avoid issues with prior runs on the same
host set.

--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -22,6 +22,14 @@
       shell: "killall -15 geth"
       ignore_errors: yes
 
+    - name: wipe geth blockchaindata (if present)
+      file:
+        path: "{{ geth_datadir }}/{{ item }}"
+        state: absent
+      with_items:
+        - chaindata
+        - dapp
+
     - name: init geth
       shell:
         cmd: "geth --datadir {{ geth_datadir }} init {{ geth_datadir }}/genesis.json"
