--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -74,11 +74,12 @@
     - name: debug
       debug:
         var: raiden_ports
+
       # note: this is far from working for ansible, just to get the general idea
     - name: shell command stub (for dir in {{ user_home }}/40*; do...)
       #chdir: "{{ user_home }}"
       debug:
-        msg: "raidenvenv/bin/raiden $(cat raiden_flags.txt) --privatekey $(cat {{ item }}/privatekey.txt) --external_listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }}"
+        msg: "raidenvenv/bin/python raiden/tools/app.py $(cat raiden_flags.txt) --privatekey $(cat {{ item }}/privatekey.txt) --external_listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ item }}/scenario.json"
         # chdir: "{{ user_home }}"
       with_items:
         - "{{ raiden_ports }}"
