added event in mock/tester blockchains

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27,coverage,flake8
 envdir = devenv
 basepython = python2.7
 usedevelop = True
+changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
     pdbpp
@@ -12,11 +13,13 @@ commands =
     py.test --blockchain-type=tester {posargs}
 
 [testenv]
+changedir = {toxinidir}/raiden
 deps =
     -rrequirements.txt
     coverage==4.0
 commands =
-    py.test --blockchain-type=tester --ignore raiden/tests/test_webui.py {posargs}
+    py.test --ignore raiden/tests/test_webui.py {posargs}
+    py.test --blockchain-type=tester {posargs}
     coverage run --source raiden --branch -m py.test --ignore raiden/tests/test_webui.py {posargs}
 
 [testenv:coverage]
