--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -44,16 +44,11 @@
   tags:
     - start_raiden
   vars:
-    scenario_runner: "{{ user_home }}/raiden/tools/app.py"
+    scenario_runner: "{{ user_home }}/raiden/tools/scenario_runner.py"
 
   tasks:
     # Collect instance id: http://stackoverflow.com/a/27307254
     - action: ec2_facts
-
-    - name: overwrite standard raiden app.py with tools version
-      copy:
-        src: "../app.py"
-        dest: "{{ raiden_dir }}/raiden/app.py"
 
     - name: configured raiden_ports
       find:
@@ -72,13 +67,13 @@
     #  with_items:
     #    - "{{ raiden_ports }}"
 
-    - name: expand raiden flags
-      shell:
-        cmd: "echo $(cat {{ user_home}}/raiden_flags.txt)"
-      register: raiden_flags
+    - name: update repository if asked (set `-e force_pull=True`)
+      shell: "git pull --rebase"
+      chdir: "{{ raiden_dir }}"
+      when: force_pull is defined
 
     - name: execute raidens asynchronously
-      command: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ raiden_dir }}/raiden/app.py {{ raiden_flags.stdout }} --privatekey_file {{ user_home }}/{{ item }}/privatekey.txt --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ user_home }}/{{ item }}/scenario.json --logfile {{ user_home }}/raiden-{{ item }}.log"
+      shell: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt ) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logfile {{ user_home }}/raiden-{{ item }}.log"
       async: 600
       poll: 0
       with_items:
