--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pyethapp>=1.5.0
 ipython<5.0.0
 gevent==1.1.0
 rlp>=0.4.3
-c_secp256k1==0.0.8
+secp256k1==0.12.1
 pycryptodome>=3.3.1
 networkx
 ethereum>=1.3.2
