--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,17 @@ python:
 cache:
   directories:
       - ~/.ethash
+      - ~/.bin
 before_install:
 - sudo add-apt-repository -y ppa:ethereum/ethereum
 - sudo apt-get update
-- sudo apt-get install -y solc ethereum
+- sudo apt-get install -y ethereum
 - mkdir -p ~/.ethash
 - geth makedag 0 ~/.ethash
+- mkdir -p ~/.bin
+- curl -L https://github.com/rainbeam/solidity-static/releases/download/v0.3.6/solc > ~/.bin/solc
+- chmod +x ~/.bin/solc
+- export PATH=$PATH:~/.bin
 install:
 - pip install -r requirements.txt
 - pip install coveralls
