--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -74,7 +74,7 @@
       when: force_pull is defined
 
     - name: execute raidens asynchronously
-      shell: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt ) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logfile {{ user_home }}/raiden-{{ item }}.log"
+      shell: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt ) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logging ':DEBUG' --logfile {{ user_home }}/raiden-{{ item }}.log"
       async: 600
       poll: 0
       with_items:
