--- a/tools/ansible/run-scenario.yaml
+++ b/tools/ansible/run-scenario.yaml
@@ -79,11 +79,23 @@
       when: force_pull is defined
 
     - name: execute raidens asynchronously
-      shell: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt ) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logfile {{ user_home }}/raiden-{{ item }}.log"
-      async: 600
+      shell:
+        cmd: "{{ ansible_env.HOME }}/raidenvenv/bin/python {{ scenario_runner }} $(cat {{ ansible_env.HOME }}/raiden_flags.txt ) --privatekey $(cat {{ ansible_env.HOME }}/{{ item }}/privatekey.txt) --listen_address {{ ansible_ec2_local_ipv4 }}:{{ item }} --scenario {{ ansible_env.HOME }}/{{ item }}/scenario.json --logfile raiden-{{ item }}.log --stage_prefix=raiden-{{ item }}"
+        chdir: "{{ user_home }}"
+      async: 1200
       poll: 0
       with_items:
         - "{{ raiden_ports }}"
+
+    # TODO: synchronizes a single host, check synchronizing multiple hosts...
+    - name: wait for raidens initialization (this may take a long time...)
+      wait_for:
+        path: "{{ user_home }}/raiden-{{ item }}.stage1"
+      with_items:
+        - "{{ raiden_ports }}"
+
+    - name: signal all nodes to start sending messages
+      shell: "killall --signal=SIGUSR2 python"
 
 - hosts: tag_Name_Scenario
   name: terminate
